--- a/navbar.css
+++ b/navbar.css
@@ -26,16 +26,6 @@
         margin-left: 5px;
         margin-top: 10px;
     }
-    
-    .nav-bar .tab:hover {
-        font-weight: bold;
-        cursor: pointer;
-    }
-    
-    .nav-bar .tab a{
-        text-decoration: none;
-        color: black;
-    }    
 } 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -66,16 +56,6 @@
         margin-left: 5px;
         margin-top: 10px;
     }
-    
-    .nav-bar .tab:hover {
-        font-weight: bold;
-        cursor: pointer;
-    }
-    
-    .nav-bar .tab a{
-        text-decoration: none;
-        color: black;
-    } 
 } 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
@@ -106,16 +86,6 @@
         margin-left: 5px;
         margin-top: 10px;
     }
-    
-    .nav-bar .tab:hover {
-        font-weight: bold;
-        cursor: pointer;
-    }
-    
-    .nav-bar .tab a{
-        text-decoration: none;
-        color: black;
-    } 
 } 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
@@ -146,14 +116,15 @@
         margin-left: 5px;
         margin-top: 10px;
     }
-    
-    .nav-bar .tab:hover {
-        font-weight: bold;
-        cursor: pointer;
-    }
-    
-    .nav-bar .tab a{
-        text-decoration: none;
-        color: black;
-    } 
 }
+
+.nav-bar .tab:hover {
+    font-weight: bold;
+    cursor: pointer;
+    transition-duration: .25s;
+}
+
+.nav-bar .tab a{
+    text-decoration: none;
+    color: black;
+}    
