--- a/products.css
+++ b/products.css
@@ -325,6 +325,10 @@ table {
         font-size: 16px;
         color: grey;
     }
+
+    .product-hidden-desc {
+        display: none;
+    }
 }
 
 /* .product {
