--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,7 @@
+body {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .nav-bar-container {
