--- a/productDesc.css
+++ b/productDesc.css
@@ -54,6 +54,10 @@ label, input {
     #reviews {
         border: 1px solid black;
     }
+
+    .form-container{
+        border: 1px solid black;
+    }
 } 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -84,6 +88,7 @@ label, input {
     #reviews {
         border: 1px solid black;
     }
+    
 } 
 
 /* Medium devices (landscape tablets, 768px and up) */
