--- a/productDesc.css
+++ b/productDesc.css
@@ -25,8 +25,23 @@ body {
     padding-top: 20px;
 }
 
-label, input {
-    display: block;
+
+input[type=text], select {
+    width: 400px;
+    padding: 12px 20px;
+    margin: 8px 0px;
+    display: inline-block;
+    border: 1px solid rgb(184, 184, 184);
+    border-radius: 5px;
+}
+
+input[type=submit] {
+    width: 200px;
+    padding: 12px 20px;
+    border: none;
+    color: gray;
+    /* background-color: gray; */
+    border-radius: 5px;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -57,6 +72,7 @@ label, input {
 
     .form-container{
         border: 1px solid black;
+        padding-left: 5%;
     }
 } 
 
