--- a/productDesc.css
+++ b/productDesc.css
@@ -25,7 +25,6 @@ body {
     padding-top: 20px;
 }
 
-
 input[type=text], select {
     font-size: 16px;
     padding: 12px 20px;
@@ -77,6 +76,10 @@ input[type=submit]:hover {
         padding-bottom: 100px;
     }
 
+    h3{
+        width: 100%;
+    }
+
     input[type=text], select {
         width: 400px;
     }
@@ -110,6 +113,10 @@ input[type=submit]:hover {
     .form-container {
         /* background-color: aquamarine; */
         padding: 10%;
+    }
+
+    h3{
+        width: 100%;
     }
 
     .input-field{
@@ -178,6 +185,10 @@ input[type=submit]:hover {
         padding: 10%;
     }
 
+    h3{
+        width: 100%;
+    }
+
     .input-field{
         margin: 10px;
         /* background-color: blueviolet; */
@@ -243,6 +254,7 @@ input[type=submit]:hover {
     }
 
     .form-container {
+        /* background-color: blue; */
         padding: 10%;
     }
 
@@ -255,8 +267,13 @@ input[type=submit]:hover {
         margin: 5px;
     }
 
+    h3 {
+        width: 100%;
+        /* background-color: red; */
+    }
+
     .input-field{
-        margin: 10px;
+        margin: 10px;;
         width: 90%;
     }
 
@@ -267,6 +284,7 @@ input[type=submit]:hover {
     .main-info {
         display: flex;
         flex-wrap: wrap;
+        height: 100px;
     }
 
     .shipping-info {
@@ -282,6 +300,11 @@ input[type=submit]:hover {
     .payment-info {
         display: flex;
         flex-wrap: wrap;
+        height: 200px;
+    }
+
+    input[type=submit] {
+        margin-top: 25px;
     }
 }
 
@@ -314,5 +337,59 @@ input[type=submit]:hover {
     .side-product-description{
         width: 20%;
         padding-left: 20px;
+    }
+
+    .form-container {
+        /* background-color: blue; */
+        padding: 10%;
+    }
+
+    .form-row {
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+    }
+
+    .form-column{
+        margin: 5px;
+    }
+
+    h3 {
+        width: 100%;
+        /* background-color: red; */
+    }
+
+    .input-field{
+        margin: 10px;;
+        width: 90%;
+    }
+
+    input[type=text], select {
+        width: 100%;
+    }
+    
+    .main-info {
+        display: flex;
+        flex-wrap: wrap;
+        height: 100px;
+    }
+
+    .shipping-info {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .shipping-address {
+        display: flex;
+        flex-wrap: wrap;
+    } 
+
+    .payment-info {
+        display: flex;
+        flex-wrap: wrap;
+        height: 200px;
+    }
+
+    input[type=submit] {
+        margin-top: 25px;
     }
 }
