--- a/team.css
+++ b/team.css
@@ -8,8 +8,6 @@ body {
 
 .bio-container{
     width: 100%;
-    /* display: grid;
-    grid-template-columns: auto auto; */
 } 
 
 .bio-pic {
@@ -18,6 +16,11 @@ body {
     object-fit: cover;
     border-radius: 50%;
     padding: 30px;
+}
+
+.bio-name{
+    font-size: 22px;
+    font-weight: bold;
 }
 
 .bio-major{
@@ -29,12 +32,13 @@ body {
     color: gray;
 }
 
+.bio-pic:hover{
+    transform: scale(1.1);
+    transition-duration: .2s;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    /* body{
-        background-color: red;
-    } */
-
     .bio-container {
         text-align: center;
     }
@@ -46,10 +50,6 @@ body {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    /* body{
-        background-color: orange;
-    } */
-    
     .bio-container {
         text-align: center;
     }
@@ -65,10 +65,6 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
-    /* body{
-        background-color: blue;
-    } */
-
     .bio-container {
         display: flex;
         justify-content: center;
@@ -87,10 +83,6 @@ body {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    /* body{
-        background-color: yellow;
-    } */
-
     .bio-container {
         display: flex;
         justify-content: center;
@@ -119,10 +111,6 @@ body {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-    /* body{
-        background-color: green;
-    } */
-
     .bio-container {
         display: flex;
         justify-content: center;
